# geant4-tutorial

./: CMakeLists.txt  README.md  action.hh  aux.cc  cfg.hh  construction.hh  detector.hh  event.hh  generator.cc  generator.hh  physics.cc  physics.hh  recompile.sh  run.mac  scintillator.cc  scintillator.hh  sim.cc  sim.code-workspace  stepping.cc  stepping.hh  vis.mac
headers/: aux.hh  cfg.hh  detector.hh  generator.hh  physics.hh  run.hh  scintillator.hh  stepping.hh
macros/: run.mac  vis.mac
src/: detector.cc
